--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
+    "babel-preset-stage-2": "^6.24.1",
     "bootstrap": "^4.3.1",
     "mutationobserver-shim": "^0.3.3",
     "popper.js": "^1.16.0",
