--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@vue/cli-service": "~4.2.0",
     "bootstrap": "^4.3.1",
     "mutationobserver-shim": "^0.3.3",
+    "node-sass": "^4.13.1",
     "popper.js": "^1.16.0",
     "portal-vue": "^2.1.6",
     "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^8.0.2",
     "vue-cli-plugin-bootstrap-vue": "~0.6.0",
     "vue-template-compiler": "^2.6.11"
   }
